--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
         </div>
         <div class="form-group">
           <input type="text" class="form-control" id="comment" placeholder="comment">
+          <br>
+	<input id="pictureURL" placeholder="Enter image URL for a profile photo." class="boxes">
+	<br>
 
           <button type="button" onclick="getinfo()" class="btn btn-danger btn-lg">REVEAL</button>
         </div>
